fix: corrigir erros ao gerar partidas no campeonato